--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-aiogram>=3.6
-fastapi>=0.115
-uvicorn[standard]>=0.30
-SQLAlchemy>=2.0
-psycopg[binary,pool]>=3.1
-alembic>=1.13
-httpx>=0.27
-pydantic>=2.7
-pydantic-settings>=2.4
-python-dotenv>=1.0
-PyJWT>=2.9
-pytz>=2024.1   # опц.; в коді використано zoneinfo
+aiogram==3.6.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+SQLAlchemy==2.0.35
+asyncpg==0.29.0
+alembic==1.13.2
+httpx==0.27.2
+pydantic==2.7.4
+pydantic-core==2.18.4
+pydantic-settings==2.4.0
+python-dotenv==1.0.1
+PyJWT==2.9.0
